--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <title>index</title>
   </head>
   <body>
-    <nav>
-      <a href="http://rawgit.com/ERNESTODURA/EMPRESABASICA/master/nuestrosservicios.html">Ir a Nuestros Servicos</a>
- 			<a href="http://rawgit.com/ERNESTODURA/EMPRESABASICA/master/nosotros.html">Ir a Nosotros</a>
-      <a href="http://es.wikipedia.org/wiki/fotocopia">Ir a Fotocopia</a> 
-    </nav>
-    
+    <nav> <a href="http://rawgit.com/ERNESTODURA/EMPRESABASICA/master/ejerciciosTema2/nuestrosServicios.html">Ir
+        a Nuestros Servicos</a> <a href="http://rawgit.com/ERNESTODURA/EMPRESABASICA/master/ejerciciosTema2/nosotros.html">Ir
+        a Nosotros</a> <a href="http://es.wikipedia.org/wiki/fotocopia">Ir a
+        Fotocopia</a> </nav>
   </body>
 </html>
