--- a/ejerciciosTema2/nuestrosServicios.html
+++ b/ejerciciosTema2/nuestrosServicios.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <a name="principio"></a>
-    <nav> <a href="../ejerciciosTema2/nosotros.htlm">Ir a Nosotros</a> <a href="../index.html">Ir
+    <nav> <a href="../ejerciciosTema2/nosotros.html">Ir a Nosotros</a> <a href="../index.html">Ir
         a Inicio</a> <a href="https://github.com/ERNESTODURA/EMPRESABASICA">Ir
         a mi repositorio</a> <a href="maito:edura@ua.es">Enviar correo
         electronico</a> <a href="#final">Ir abajo</a> </nav>
