--- a/ejerciciosTema2/nosotros.html
+++ b/ejerciciosTema2/nosotros.html
@@ -12,11 +12,9 @@
     <p> <img src="../imagenes/logo_empresa.jpg"></p>
     <p><br>
     </p>
-    <nav>
-      <a href="../ejerciciosTema2/nuestrosServicios.htlm">Ir a Nuestros Servicios</a>
-      <a href="../index.html">Ir a Inicio</a> 
-      <a href="https://github.com/ERNESTODURA/EMPRESABASICA">Ir a mi repositorio</a> 
-      <a href="maito:edura@ua.es">Enviar correo electronico</a> </nav>
-    
+    <nav> <a href="../ejerciciosTema2/nuestrosServicios.htlm">Ir a Nuestros
+        Servicios</a> <a href="../index.html">Ir a Inicio</a> <a href="https://github.com/ERNESTODURA/EMPRESABASICA">Ir
+        a mi repositorio</a> <a href="maito:edura@ua.es">Enviar correo
+        electronico</a> </nav>
   </body>
 </html>
