--- a/ejerciciosTema2/nuestrosServicios.html
+++ b/ejerciciosTema2/nuestrosServicios.html
@@ -4,15 +4,15 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>NUESTROS SERVICIOS</title>
   </head>
-  <body>
-    <a name="principio"></a>
+  <body> 
+	<a name="principio"></a>
     <nav> 
-      <a href="../ejerciciosTema2/nosotros.html">Ir a Nosotros</a> 
-      <a href="../index.html">Ir a Inicio</a> 
-      <a href="https://github.com/ERNESTODURA/EMPRESABASICA">Ir a mi repositorio</a> 
-      <a href="maito:edura@ua.es">Enviar correo electronico</a> 
-      <a href="#final">Ir abajo</a>
-    </nav>
+		<a href="nosotros.html">Ir a Nosotros</a>
+		<a href="../index.html">Ir a Inicio</a>
+		<a href="https://github.com/ERNESTODURA/EMPRESABASICA">Ir a mi repositorio</a>
+		<a href="mailto:edura@ua.es">Enviar correo electronico</a>
+		<a href="#final">Ir abajo</a>
+	</nav>
     <br>
     <p style="margin: 0px 0px 15px; padding: 0px; text-align: justify; color: rgb(0, 0, 0); font-family: &quot;Open Sans&quot;, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); text-decoration-style: initial; text-decoration-color: initial;">Lorem
       ipsum dolor sit amet, consectetur adipiscing elit. Sed sem lacus, egestas
