--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>index</title>
+    <title>INDICE</title>
+	<style>
+    	#título {
+				text-align: center;
+				font-size: x-large;
+				color: red;
+				}
+ 	</style>
   </head>
   <body>
-    <nav>
+	<p id="título">EMPRESA BÁSICA</p>
+	<nav>
 		<a href="ejerciciosTema2/nuestrosServicios.html">Ir a Nuestros Servicos</a>
 		<a href="ejerciciosTema2/nosotros.html">Ir a Nosotros</a> 
 		<a href="http://es.wikipedia.org/wiki/fotocopia">Ir a Fotocopia</a>
