--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
 	<nav>
 		<a href="ejerciciosTema2/nosotros.html">Ir a Nosotros</a>
 		<a href="ejerciciosTema2/nuestrosServicios.html">Ir a Nuestros Servicos</a>
+		<a href="formulario/opinion.html">Opinión</a>
 	</nav>
 	
 	<aside>
