--- a/formulario/opinion.html
+++ b/formulario/opinion.html
@@ -93,7 +93,7 @@
 </head>
 	<body>
 		<header>
-			<h1>BIENVENIDO A NUESTRA WEB!</h1>
+			<h1>TU OPINIÓN CUENTA</h1>
 			<picture> <img src="../imagenes/logo_empresa.jpg" alt="logotipo de mi empresa"></picture>
 		</header>
 		<nav> 
